# polyfy

./: .gitignore  CMakeLists.txt  README.md  README.org  sca-backwardrewriting_notes.txt
apps/: CMakeLists.txt  aig_to_poly.cpp  main.cpp
cmake/: DownloadProject.CMakeLists.cmake.in
include/: Ideal.hpp  Monomial.hpp  Parse.hpp  Polynomial.hpp  Term.hpp  Utils.hpp  test.hpp
src/: CMakeLists.txt  Ideal.cpp  Monomial.cpp  Parse.cpp  Polynomial.cpp  Term.cpp
test/: CMakeLists.txt  test_polyfy.cpp
